// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TagList > renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 8px;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-7 {
  font-size: 12px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 232px;
}

.emotion-9 {
  display: inherit;
}

.emotion-9[data-container-full-width='true'] {
  width: 100%;
}

.emotion-11 {
  cursor: pointer;
  color: #641cb3;
  border: none;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 8px;
  padding-right: 8px;
}

<div
    data-testid="testing"
  >
    <div>
      <div
        class="emotion-0 emotion-1"
      >
        <div
          class="emotion-2 emotion-3"
        >
          <span
            class="emotion-4 emotion-5"
          >
            <span
              class="emotion-6 emotion-7 emotion-8"
            >
              scaleway
            </span>
          </span>
        </div>
        <div
          aria-controls=":r1:"
          aria-describedby=":r1:"
          class="emotion-9 emotion-10"
          tabindex="-1"
        >
          <span
            class="emotion-11 emotion-12"
            data-testid="taglist-open"
          >
            +1
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagList > renders correctly with copiable 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 8px;
}

.emotion-4 {
  display: inherit;
}

.emotion-4[data-container-full-width='true'] {
  width: 100%;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-6:hover,
.emotion-6:active {
  cursor: pointer;
  background: #e9eaeb;
  border-color: #92959d;
}

.emotion-6:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-9 {
  font-size: 12px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 232px;
}

<div
    data-testid="testing"
  >
    <div>
      <div
        class="emotion-0 emotion-1"
      >
        <div
          class="emotion-2 emotion-3"
        >
          <div
            aria-controls=":re:"
            aria-describedby=":re:"
            class="emotion-4 emotion-5"
            tabindex="0"
          >
            <button
              class="emotion-6 emotion-7"
            >
              <span
                class="emotion-8 emotion-9 emotion-10"
              >
                scaleway
              </span>
            </button>
          </div>
          <div
            aria-controls=":rg:"
            aria-describedby=":rg:"
            class="emotion-4 emotion-5"
            tabindex="0"
          >
            <button
              class="emotion-6 emotion-7"
            >
              <span
                class="emotion-8 emotion-9 emotion-10"
              >
                cloud
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagList > renders correctly with custom threshold 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 8px;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-7 {
  font-size: 12px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 232px;
}

<div
    data-testid="testing"
  >
    <div>
      <div
        class="emotion-0 emotion-1"
      >
        <div
          class="emotion-2 emotion-3"
        >
          <span
            class="emotion-4 emotion-5"
          >
            <span
              class="emotion-6 emotion-7 emotion-8"
            >
              scaleway
            </span>
          </span>
          <span
            class="emotion-4 emotion-5"
          >
            <span
              class="emotion-6 emotion-7 emotion-8"
            >
              cloud
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagList > renders correctly with custom threshold and extra tags 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 8px;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-7 {
  font-size: 12px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 232px;
}

.emotion-14 {
  display: inherit;
}

.emotion-14[data-container-full-width='true'] {
  width: 100%;
}

.emotion-16 {
  cursor: pointer;
  color: #641cb3;
  border: none;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 8px;
  padding-right: 8px;
}

<div
    data-testid="testing"
  >
    <div>
      <div
        class="emotion-0 emotion-1"
      >
        <div
          class="emotion-2 emotion-3"
        >
          <span
            class="emotion-4 emotion-5"
          >
            <span
              class="emotion-6 emotion-7 emotion-8"
            >
              scaleway
            </span>
          </span>
          <span
            class="emotion-4 emotion-5"
          >
            <span
              class="emotion-6 emotion-7 emotion-8"
            >
              cloud
            </span>
          </span>
        </div>
        <div
          aria-controls=":r8:"
          aria-describedby=":r8:"
          class="emotion-14 emotion-15"
          tabindex="-1"
        >
          <span
            class="emotion-16 emotion-17"
            data-testid="taglist-open"
          >
            +1
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagList > renders correctly with custom threshold and extra tags and maxLength inferior to the combined size of tags 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 8px;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-7 {
  font-size: 12px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 232px;
}

.emotion-9 {
  display: inherit;
}

.emotion-9[data-container-full-width='true'] {
  width: 100%;
}

.emotion-11 {
  cursor: pointer;
  color: #641cb3;
  border: none;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 8px;
  padding-right: 8px;
}

<div
    data-testid="testing"
  >
    <div>
      <div
        class="emotion-0 emotion-1"
      >
        <div
          class="emotion-2 emotion-3"
        >
          <span
            class="emotion-4 emotion-5"
          >
            <span
              class="emotion-6 emotion-7 emotion-8"
            >
              scaleway
            </span>
          </span>
        </div>
        <div
          aria-controls=":ra:"
          aria-describedby=":ra:"
          class="emotion-9 emotion-10"
          tabindex="-1"
        >
          <span
            class="emotion-11 emotion-12"
            data-testid="taglist-open"
          >
            +2
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagList > renders correctly with icons 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 8px;
}

.emotion-4 {
  display: inherit;
}

.emotion-4[data-container-full-width='true'] {
  width: 100%;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-6:hover,
.emotion-6:active {
  cursor: pointer;
  background: #e9eaeb;
  border-color: #92959d;
}

.emotion-6:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-9 {
  font-size: 12px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 232px;
}

<div
    data-testid="testing"
  >
    <div>
      <div
        class="emotion-0 emotion-1"
      >
        <div
          class="emotion-2 emotion-3"
        >
          <div
            aria-controls=":ri:"
            aria-describedby=":ri:"
            class="emotion-4 emotion-5"
            tabindex="0"
          >
            <button
              class="emotion-6 emotion-7"
            >
              <span
                class="emotion-8 emotion-9 emotion-10"
              >
                scaleway
              </span>
            </button>
          </div>
          <div
            aria-controls=":rk:"
            aria-describedby=":rk:"
            class="emotion-4 emotion-5"
            tabindex="0"
          >
            <button
              class="emotion-6 emotion-7"
            >
              <span
                class="emotion-8 emotion-9 emotion-10"
              >
                cloud
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagList > renders correctly with multiline 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 8px;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-7 {
  font-size: 12px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 232px;
}

.emotion-14 {
  display: inherit;
}

.emotion-14[data-container-full-width='true'] {
  width: 100%;
}

.emotion-16 {
  cursor: pointer;
  color: #641cb3;
  border: none;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 8px;
  padding-right: 8px;
}

<div
    data-testid="testing"
  >
    <div>
      <div
        class="emotion-0 emotion-1"
      >
        <div
          class="emotion-2 emotion-3"
        >
          <span
            class="emotion-4 emotion-5"
          >
            <span
              class="emotion-6 emotion-7 emotion-8"
            >
              scaleway
            </span>
          </span>
          <span
            class="emotion-4 emotion-5"
          >
            <span
              class="emotion-6 emotion-7 emotion-8"
            >
              cloud
            </span>
          </span>
        </div>
        <div
          aria-controls=":rd:"
          aria-describedby=":rd:"
          class="emotion-14 emotion-15"
          tabindex="-1"
        >
          <span
            class="emotion-16 emotion-17"
            data-testid="taglist-open"
          >
            +1
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagList > renders correctly with not tags 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div />
  </div>
</DocumentFragment>
`;

exports[`TagList > renders correctly with placement 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 8px;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-7 {
  font-size: 12px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 232px;
}

.emotion-9 {
  display: inherit;
}

.emotion-9[data-container-full-width='true'] {
  width: 100%;
}

.emotion-11 {
  cursor: pointer;
  color: #641cb3;
  border: none;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 8px;
  padding-right: 8px;
}

<div
    data-testid="testing"
  >
    <div>
      <div
        class="emotion-0 emotion-1"
      >
        <div
          class="emotion-2 emotion-3"
        >
          <span
            class="emotion-4 emotion-5"
          >
            <span
              class="emotion-6 emotion-7 emotion-8"
            >
              scaleway
            </span>
          </span>
        </div>
        <div
          aria-controls=":r3:"
          aria-describedby=":r3:"
          class="emotion-9 emotion-10"
          tabindex="-1"
        >
          <span
            class="emotion-11 emotion-12"
            data-testid="taglist-open"
          >
            +1
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
